[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/visual_fsm/editor/visual_fsm_graph_edit.gd" type="Script" id=1]
[ext_resource path="res://addons/visual_fsm/editor/visual_fsm_editor.gd" type="Script" id=2]
[ext_resource path="res://addons/visual_fsm/editor/visual_fsm_new_event_dialog.gd" type="Script" id=3]
[ext_resource path="res://addons/visual_fsm/resources/icons/icon_script.svg" type="Texture" id=4]
[ext_resource path="res://addons/visual_fsm/resources/icons/icon_timer.svg" type="Texture" id=5]
[ext_resource path="res://addons/visual_fsm/resources/icons/icon_joypad.svg" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.113725, 0.113725, 0.117647, 1 )

[node name="VisualFSMEditor" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 384 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisualFSMGraphEdit" type="GraphEdit" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/port_grab_distance_vertical = 24
custom_constants/port_grab_distance_horizontal = 32
right_disconnects = true
script = ExtResource( 1 )

[node name="DialogLayer" type="CanvasLayer" parent="."]

[node name="Dialog" type="ConfirmationDialog" parent="DialogLayer"]
anchor_left = 0.000976562
anchor_right = 0.000976562
anchor_bottom = 0.00333333
margin_left = 329.0
margin_top = 220.0
margin_right = 693.0
margin_bottom = 411.0
rect_min_size = Vector2( 350, 70 )
window_title = "New event"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
timer_icon = ExtResource( 5 )
action_icon = ExtResource( 6 )
script_icon = ExtResource( 4 )

[node name="Margins" type="MarginContainer" parent="DialogLayer/Dialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 356.0
margin_bottom = 157.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="DialogLayer/Dialog/Margins"]
margin_left = 16.0
margin_top = 16.0
margin_right = 332.0
margin_bottom = 133.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventName" type="LineEdit" parent="DialogLayer/Dialog/Margins/Content"]
margin_right = 316.0
margin_bottom = 24.0
placeholder_text = "Event name"
caret_blink = true
caret_blink_speed = 0.5

[node name="EventType" type="MenuButton" parent="DialogLayer/Dialog/Margins/Content"]
margin_top = 34.0
margin_right = 316.0
margin_bottom = 54.0
text = "Event type"
flat = false
items = [ "Input action", ExtResource( 6 ), 0, false, false, 0, 0, null, "", false, "Timer timeout", ExtResource( 5 ), 0, false, false, 1, 0, null, "", false, "Custom script", ExtResource( 4 ), 0, false, false, 2, 0, null, "", false ]

[node name="Prompt" type="PanelContainer" parent="DialogLayer/Dialog/Margins/Content"]
margin_top = 64.0
margin_right = 316.0
margin_bottom = 117.0
custom_styles/panel = SubResource( 1 )

[node name="Margin" type="MarginContainer" parent="DialogLayer/Dialog/Margins/Content/Prompt"]
margin_right = 316.0
margin_bottom = 53.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="DialogLayer/Dialog/Margins/Content/Prompt/Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 306.0
margin_bottom = 43.0
custom_constants/separation = 5

[node name="Name" type="Label" parent="DialogLayer/Dialog/Margins/Content/Prompt/Margin/VBox"]
margin_right = 296.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Event name must not be empty."
valign = 1

[node name="Type" type="Label" parent="DialogLayer/Dialog/Margins/Content/Prompt/Margin/VBox"]
margin_top = 19.0
margin_right = 296.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Must select an event type from the dropdown."
valign = 1
[connection signal="_end_node_move" from="VisualFSMGraphEdit" to="VisualFSMGraphEdit" method="_on_end_node_move"]
[connection signal="connection_request" from="VisualFSMGraphEdit" to="VisualFSMGraphEdit" method="_on_connection_request"]
[connection signal="disconnection_request" from="VisualFSMGraphEdit" to="VisualFSMGraphEdit" method="_on_disconnection_request"]
[connection signal="confirmed" from="DialogLayer/Dialog" to="DialogLayer/Dialog" method="_on_confirmed"]
[connection signal="event_name_request" from="DialogLayer/Dialog" to="VisualFSMGraphEdit" method="_on_Dialog_event_name_request"]
[connection signal="new_event_created" from="DialogLayer/Dialog" to="VisualFSMGraphEdit" method="_on_Dialog_new_event_created"]
